--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -1,6 +1,5 @@
-#  ALL CARDS THAT USE THE ORIGINAL DEATHS METRICS ARE STILL HERE PENDING A DECISION ON WHICH METRICS WE WILL BE USING
-
 headlineNumbers:
+
   - caption: Deaths within 28 days of positive test
     valueItems:
       - label: Daily
@@ -24,306 +23,6 @@ headlineNumbers:
 ##############################################################################################################################
 
 cards:
-
-# Only shown for UK
-
-  # - heading: Deaths by date reported, by nation
-  #   cardType: multiAreaStatic
-  #   locationAware:
-  #     included: 
-  #       areaType:
-  #         - overview
-
-  #   fullWidth: true
-
-  #   abstract: > 
-  #     Number of deaths of people who had had a positive test result for COVID-19, by date reported.  
-  #     The actual cause of death may not be COVID-19 in all cases. People who died from COVID-19 but
-  #     had not tested positive are not included. Data from the four nations are not directly
-  #     comparable as methodologies and inclusion criteria vary.
-
-  #   download:
-  #     - newDeathsByPublishDate
-  #     - cumDeathsByPublishDate
-
-  #   options:
-  #     type: radio
-  #     heading: null
-  #     choices:
-  #       - By nation
-  #       - UK total
-    
-  #   By nation:
-      
-  #     tabs:
-  #       - heading: Daily
-  #         tabType: chart
-  #         barType: stack
-  #         colours: [0, 9, 3, 10] # areaNames in alphabetical order
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: nation
-  #         fields:
-  #           - label: ""
-  #             value: newDeathsByPublishDate
-  #             tooltip: Daily number of new deaths of people resident in each nation, by date reported
-  #             type: bar
-  #             rollingAverage: false
-
-  #       - heading: Cumulative
-  #         tabType: chart
-  #         barType: stack
-  #         colours: [0, 9, 3, 10] # areaNames in alphabetical order
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: nation
-  #         fields:
-  #           - label: ""
-  #             value: cumDeathsByPublishDate
-  #             tooltip: Cumulative total number of new deaths of people resident in each nation, by date reported
-  #             type: bar
-  #             rollingAverage: false
-
-  #       - heading: Data
-  #         tabType: table
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: nation
-  #         fields:
-  #           - label: Date reported
-  #             value: date
-  #             type: date
-  #             tooltip: Date reported on coronavirus.data.gov.uk
-
-  #           - label: daily
-  #             value: newDeathsByPublishDate
-  #             type: numeric
-  #             tooltip: Daily number of new deaths of people resident in each nation, by date reported
-
-  #           - label: total
-  #             value: cumDeathsByPublishDate
-  #             type: numeric
-  #             tooltip: Cumulative total number of new deaths of people resident in each nation, by date reported
-
-  #       - heading: About 
-  #         tabType: metadata
-  #         filename: cardMetadata/deaths/cardDeathsTimeSeries.md
-
-  #   UK total:
-
-  #     tabs:
-  #       - heading: Daily
-  #         tabType: chart
-  #         barType: stack
-  #         colours: [0] # areaNames in alphabetical order
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: overview
-  #         fields:
-  #           - label: ""
-  #             value: newDeathsByPublishDate
-  #             tooltip: Daily number of new deaths, by date reported
-  #             type: bar
-  #             rollingAverage: false
-
-  #           - label: (7-day average)
-  #             value: newDeathsByPublishDate
-  #             tooltip: 7 day rolling average of the daily number of new deaths
-  #             type: line
-  #             colour: 3
-  #             rollingAverage: true
-
-  #       - heading: Cumulative
-  #         tabType: chart
-  #         barType: stack
-  #         colours: [0] # areaNames in alphabetical order
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: overview
-  #         fields:
-  #           - label: ""
-  #             value: cumDeathsByPublishDate
-  #             tooltip: Cumulative total number of new deaths, by date reported
-  #             type: bar
-  #             rollingAverage: false
-
-  #       - heading: Data
-  #         tabType: table
-  #         params:
-  #           - key: areaType
-  #             sign: "="
-  #             value: overview
-  #         fields:
-  #           - label: Date reported
-  #             value: date
-  #             type: date
-  #             tooltip: Date reported on coronavirus.data.gov.uk
-
-  #           - label: daily
-  #             value: newDeathsByPublishDate
-  #             type: numeric
-  #             tooltip: Daily number of new deaths, by date reported
-
-  #           - label: total
-  #             value: cumDeathsByPublishDate
-  #             type: numeric
-  #             tooltip: Cumulative total number of new deaths, by date reported
-
-  #       - heading: About 
-  #         tabType: metadata
-  #         filename: cardMetadata/deaths/cardDeathsTimeSeries.md
-
-##############################################################################################################################
-
-# Not shown for UK
-
-  # - heading: Daily deaths by date of death
-  #   cardType: chart
-  #   locationAware:
-  #     excluded:
-  #       areaType:
-  #         - overview
-
-  #   fullWidth: true
-  #   abstract: > 
-  #     Number of deaths of people who had had a positive test result for COVID-19, by date of death.  
-  #     The actual cause of death may not be COVID-19 in all cases. People who died from COVID-19 but
-  #     had not tested positive are not included. Methodologies and inclusion criteria vary between
-  #     the four nations.
-
-  #   download:
-  #     - newDeathsByDeathDate
-  #     - cumDeathsByDeathDate
-
-  #   tabs: 
-  #     - heading: Daily
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Number of deaths
-  #           value: newDeathsByDeathDate
-  #           tooltip: Daily number of deaths by date of death
-  #           type: bar
-  #           colour: 0
-
-  #         - label: Deaths (7-day average)
-  #           value: newDeathsByDeathDate
-  #           tooltip: 7 day rolling average of the daily number of deaths
-  #           type: line
-  #           colour: 3
-  #           fill: false
-  #           rollingAverage: true
-                  
-  #     - heading: Cumulative
-  #       tabType: chart
-  #       fields:
-  #         - label: Number of deaths
-  #           value: cumDeathsByDeathDate
-  #           tooltip: Cumulative total number of deaths by date of death
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
-                  
-  #     - heading: Data
-  #       tabType: table
-  #       fields:
-  #         - label: Date of death
-  #           value: date
-  #           type: date
-  #           tooltip: Date on which the death occurred
-
-  #         - label: Daily deaths
-  #           value: newDeathsByDeathDate
-  #           type: numeric
-  #           tooltip: Daily number of deaths
-
-  #         - label: Cumulative deaths
-  #           value: cumDeathsByDeathDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of deaths
-
-  #     - heading: About 
-  #       tabType: metadata
-  #       filename: cardMetadata/deaths/cardDeathsTimeSeries.md
-
-##############################################################################################################################
-
-# Not shown for UK
-
-  # - heading: Daily deaths by date reported
-  #   cardType: chart
-  #   locationAware:
-  #     excluded:
-  #       areaType:
-  #         - overview
-
-  #   fullWidth: true
-  #   abstract: > 
-  #     Number of deaths of people who had had a positive test result for COVID-19, by date reported.  
-  #     The actual cause of death may not be COVID-19 in all cases. People who died from COVID-19 but
-  #     had not tested positive are not included. Methodologies and inclusion criteria vary between
-  #     the four nations. 
-    
-  #   download:
-  #     - newDeathsByPublishDate
-  #     - cumDeathsByPublishDate
-
-  #   tabs: 
-  #     - heading: Daily
-  #       tabType: chart
-  #       barType: normal
-  #       fields:
-  #         - label: Number of deaths
-  #           value: newDeathsByPublishDate
-  #           tooltip: Daily number of deaths by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
-
-  #         - label: Deaths (7-day average)
-  #           value: newDeathsByPublishDate
-  #           tooltip: 7 day rolling average of the daily number of deaths reported
-  #           type: line
-  #           colour: 3
-  #           fill: false
-  #           rollingAverage: true
-            
-  #     - heading: Cumulative
-  #       tabType: chart
-  #       fields:
-  #         - label: Number of deaths
-  #           value: cumDeathsByPublishDate
-  #           tooltip: Cumulative total number of deaths by date reported
-  #           type: bar
-  #           colour: 0
-  #           rollingAverage: false
-            
-  #     - heading: Data
-  #       tabType: table
-  #       fields:
-  #         - label: Date reported
-  #           value: date
-  #           type: date
-  #           tooltip: Date reported on coronavirus.data.gov.uk
-
-  #         - label: Daily deaths
-  #           value: newDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Daily number of deaths by date reported
-
-  #         - label: Cumulative deaths
-  #           value: cumDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of deaths by date reported
-
-  #     - heading: About 
-  #       tabType: metadata
-  #       filename: cardMetadata/deaths/cardDeathsTimeSeries.md
 
 ##############################################################################################################################
 
@@ -1013,127 +712,6 @@ cards:
 
 ##############################################################################################################################
 
-  # - heading: Deaths by area
-  #   cardType: simpleTableStatic
-  #   fullWidth: true
-  #   abstract: >
-  #     Total number of deaths since the start of the pandemic of people who had had a positive test result
-  #     for COVID-19. The actual cause of death may not be COVID-19 in all cases. People who died from
-  #     COVID-19 but had not tested positive are not included. Data from the four nations are not directly
-  #     comparable as methodologies and inclusion criteria vary. Only data available for the latest reported
-  #     date area shown.
-
-  #   download:
-  #     - cumDeathsByPublishDate
-  #     - cumDeathsByPublishDateRate
-
-  #   tabs:
-  #     - heading: Nation
-  #       tabType: table
-  #       params:
-  #         - key: areaType
-  #           sign: "="
-  #           value: nation
-
-  #       latestBy: cumDeathsByPublishDate
-  #       sortBy: areaName
-  #       fields:
-  #         - label: Area
-  #           value: areaName
-  #           type: string
-  #           tooltip: ""
-
-  #         - label: Deaths
-  #           value: cumDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
-
-  #         - label: Rate
-  #           value: cumDeathsByPublishDateRate
-  #           type: numeric
-  #           tooltip: Death rate per 100,000 resident population
-      
-  #     - heading: Region
-  #       tabType: table
-  #       params:
-  #         - key: areaType
-  #           sign: "="
-  #           value: region
-
-  #       latestBy: cumDeathsByPublishDate
-  #       sortBy: areaName
-  #       fields:
-  #         - label: Area
-  #           value: areaName
-  #           type: string
-  #           tooltip: ""
-
-  #         - label: Deaths
-  #           value: cumDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
-
-  #         - label: Rate
-  #           value: cumDeathsByPublishDateRate
-  #           type: numeric
-  #           tooltip: Death rate per 100,000 resident population
-     
-  #     - heading: Upper tier LA
-  #       tabType: table
-  #       params:
-  #         - key: areaType
-  #           sign: "="
-  #           value: utla
-
-  #       latestBy: cumDeathsByPublishDate
-  #       sortBy: areaName
-  #       fields:
-  #         - label: Area
-  #           value: areaName
-  #           type: string
-  #           tooltip: ""
-
-  #         - label: Deaths
-  #           value: cumDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
-
-  #         - label: Rate
-  #           value: cumDeathsByPublishDateRate
-  #           type: numeric
-  #           tooltip: Death rate per 100,000 resident population
-  
-  #     - heading: Lower tier LA
-  #       tabType: table
-  #       params:
-  #         - key: areaType
-  #           sign: "="
-  #           value: ltla
-
-  #       latestBy: cumDeathsByPublishDate
-  #       sortBy: areaName
-  #       fields:
-  #         - label: Area
-  #           value: areaName
-  #           type: string
-  #           tooltip: ""
-
-  #         - label: Deaths
-  #           value: cumDeathsByPublishDate
-  #           type: numeric
-  #           tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
-
-  #         - label: Rate
-  #           value: cumDeathsByPublishDateRate
-  #           type: numeric
-  #           tooltip: Death rate per 100,000 resident population
-
-  #     - heading: About 
-  #       tabType: metadata
-  #       filename: cardMetadata/deaths/cardDeathsAndRatesByArea.md
-
-##############################################################################################################################
-
   - heading: Deaths within 28 days of positive test by area
     cardType: simpleTableStatic
     fullWidth: false
@@ -1317,6 +895,8 @@ cards:
             value: cumOnsDeathsByRegistrationDateRate
             type: numeric
             tooltip: Death rate per 100,000 resident population
+
+# temporarily excluded due to issues with E07 and E10 geography data feeds,
      
       # - heading: Upper tier LA
       #   tabType: table
